# carhire_website

./: admin_login.html  app(1).py  app.py  database.py  index.html  pyproject.toml
carhire_website/: app.py  database.py  pyproject.toml
carhire_website/static/: script.js  style.css
carhire_website/templates/: base.html  index.html
static/: script.js  style.css
templates/: admin_dashboard.html  admin_login.html  base.html  book.html  index.html  success.html
