[project]
name = "carhire-website"
version = "0.1.0"
description = "Car hire management system"
authors = [{name = "Agwora"}]
dependencies = [
    "flask>=3.0.0",
    "gunicorn>=21.2.0",
]
requires-python = ">=3.11"

[tool.poetry]
packages = []

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
