[project]
name = "carhire-website"
version = "0.1.0"
description = "A car hire management website"
authors = [
    {name = "Agwora", email = "brayoombati046@gmail.com"}
]
dependencies = [
    "flask>=3.0.0",
    "gunicorn>=21.2.0",
    "python-dotenv>=1.0.0"
]
requires-python = ">=3.11,<3.13"

[tool.poetry]
packages = [{include = "carhire_website"}]

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
